# ThreatResearch

./: .gitignore  CODE_REVIEW.md  EXECUTIVE_SUMMARY.md  Pcap Parser WebGUI Design and Technologies.md  README.md  WEBGUI_SECURITY_REVIEW.md
cuda-packet-parser/: CMakeLists.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN_COMMANDS.md  TESTING.md  TEST_RESULTS.md  build.sh  download_samples.sh
cuda-packet-parser/include/: batch_manager.h  common.h  gpu_parser.h  pcap_reader.h
cuda-packet-parser/src/: batch_manager.cpp  gpu_parser.cu  main.cpp  pcap_reader.cpp
webgui/: .env.example  .gitignore  ARCHITECTURE.md  BUILD.md  DEPLOYMENT.md  QUICKSTART.md  README.md  VISUALIZATIONS.md  docker-compose.yml
webgui/backend/: README.md  requirements.txt
webgui/backend/app/: __init__.py  main.py
webgui/backend/app/api/: flows.py  graph.py  packets.py  stats.py  stream.py  upload.py
webgui/backend/app/core/: __init__.py  config.py  opensearch.py
webgui/backend/app/models/: __init__.py  flow.py  job.py  packet.py
webgui/backend/app/workers/: __init__.py  celery_app.py  tasks.py
webgui/frontend/: README.md  package.json  svelte.config.js  tailwind.config.js  vite.config.js
webgui/frontend/src/: app.css  app.html
webgui/frontend/src/lib/api/: client.js
webgui/frontend/src/lib/components/: NetworkGraph.svelte  SessionList.svelte  StatsCharts.svelte
webgui/frontend/src/routes/: +layout.svelte  +page.svelte
webgui/frontend/src/routes/dashboard/[jobId]/: +page.svelte
webgui/frontend/src/routes/jobs/: +page.svelte
webgui/nginx/: pcap-analyzer.conf
(+1 files in other folders)
